@@ -1,5 +1,8 @@
 2012-03-13  David S. Miller  <davem@davemloft.net>
 
+	* sysdeps/ieee754/ldbl-128/s_expm1l.c (__expm1l): Use expl for
+	large parameters.
+
 	* sysdeps/unix/sysv/linux/sparc/sparc64/dl-fxstatat64.c: New file.
 
 	* sysdeps/unix/sysv/linux/openat.c (OPENAT_NOT_CANCEL): Declare syscall
